--- a/Dashboard/package.json
+++ b/Dashboard/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "dotenv": "^17.2.1",
     "lucide-react": "^0.526.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.10",
