--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "axios": "^1.10.0",
+    "dotenv": "^17.2.1",
     "framer-motion": "^12.23.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
